# generative-ai-backtesting

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  test_imports.py
config/: __init__.py
core/: CLAUDE.md  __init__.py  backtest_engine.py  backtest_runner.py  executor.py  position_manager.py  simple_backtest_engine.py
data/: __init__.py
data/loaders/: CLAUDE.md  (+2 more)
docs/: CLAUDE.md  FASE1_RESUMEN.md  FASE3_RESUMEN.md  FASE4_RESUMEN.md  OPTIMIZER_GUIDE.md  REFACTORING_PLAN.md  data_dictionary.md
metrics/: CLAUDE.md  __init__.py  metrics_aggregator.py  portfolio_metrics.py  trade_metrics.py
models/: CLAUDE.md  __init__.py  enums.py  signals.py  simple_signals.py
notebooks/: btc_pugilanime_v2_lab.ipynb  cl_futures_lab.ipynb
optimization/: CLAUDE.md  __init__.py  optimizer.py  results.py  visualizer.py
scripts/: regenerate_btc_data.py
strategies/: CLAUDE.md  __init__.py  base_strategy.py
tests/: CLAUDE.md  __init__.py  conftest.py  test_breakout_integration.py  test_breakout_strategy.py  test_ejemplo_simple.py  test_futures_engine.py  test_monte_carlo.py  test_oos_split.py  test_optimizer.py  test_short_engine.py  test_short_integration.py  test_validation_results.py  test_validation_suite.py  test_walk_forward.py
utils/: CLAUDE.md  __init__.py  timeframe.py
validation/: CLAUDE.md  __init__.py  monte_carlo.py  oos_split.py  results.py  validation_suite.py  walk_forward.py
visualization/: CLAUDE.md  __init__.py  chart_plotter.py  dashboard_manager.py  plotly_dashboard_manager.py  plotly_theme.py  theme.py
(+61 files in other folders)
